--- a/deno.json
+++ b/deno.json
@@ -3,7 +3,22 @@
     "lib": ["deno.ns", "dom", "esnext"],
     "strict": true
   },
+  "fmt": {
+    "options": {
+      "indentWidth": 2,
+      "lineWidth": 100,
+      "useTabs": false,
+      "singleQuote": true,
+      "semiColons": true
+    }
+  },
+  "lint": {
+    "rules": {
+      "tags": ["recommended"]
+    }
+  },
   "tasks": {
+    "setup": "deno run --allow-all scripts/setup-hook.ts",
     "dev": "denon run --allow-all apps/api/src/app.ts",
     "prod": "deno run --allow-all apps/api/src/app.ts"
   },
